# streamlit_demo

./: .dockerignore  .gitignore  Dockerfile  Home.py  README.md  construct_design.py  entrypoint.sh  main.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci-test.yml  deploy-to-google-cloudrun.yml
.streamlit/: config.toml
app/: Home.py  main.py
app/pages/: 2_Design_primers.py  3_Outputs.py
modules/: construct_design.py
pages/: 2_Design_primers.py  3_Outputs.py
tests/: example_echo_file_1.csv  example_echo_file_2.csv  full_plate_layout_1.csv  full_plate_layout_2.csv  primer_plate_1.csv  primer_plate_2.csv  test_construct_design.py  test_sequences.py
